fix: disable unsafe stream delta coalescing